--- a/docs/css/hero.css
+++ b/docs/css/hero.css
@@ -6,6 +6,16 @@
   background-position: center top;
   background-attachment: fixed;
 }
+
+#hero-logo-mobile {
+  max-width: 100%;
+}
+@media only screen and (min-width: 454px){
+  #hero-logo-mobile {
+    margin-top: -28px
+  }
+}
+
 @media only screen and (max-width: 750px){
   #hero-logo {
     display: none;
@@ -25,6 +35,9 @@
   .hero-section {
     min-height: 95vh;
   }
+  .hero-mobile{
+    display: none;
+  }
   #hero-logo {
     max-width: 100%; 
     height: auto; 
@@ -35,6 +48,10 @@
     margin-left: 235px;
     margin-top: -319px;
     position: absolute;
-    font-size: 57px;
+    font-size: 63px;
+    background-color: rgb(254, 221, 98);
+    border: none;
+    color: rgb(244, 139, 72);
+    font-family: 'Lilita One', cursive;
   }
 }
