cambios en paleta de colores

--- a/docs/css/products.css
+++ b/docs/css/products.css
@@ -1,5 +1,5 @@
 .products-section {
-  background-image: url("../images/productos-desktop-bg.png");
+  background-image: url("../images/cortes-bg.png");
   padding-top: 3.5%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -13,7 +13,7 @@
 @media only screen and (max-width: 750px){
   .products-section {
     grid-template-columns: 5% auto 5%;
-    grid-template-rows: 100px auto auto 20px auto auto 20px auto auto 60px;
+    grid-template-rows: 100px auto auto auto 20px auto auto auto 20px auto auto auto 20px auto auto auto 60px;
   }
   #products-title{
     grid-column: 1 / 4;
@@ -23,35 +23,64 @@
     align-items: center;
     font-size: 34px; 
   }
-  
-  .bano {
+  .razas-mini{
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    text-align: center;
+  }
+  .mini {
      grid-column: 2 / 3;
-     grid-row: 2 / 3;
+     grid-row: 3 / 4;
      margin: auto;
   }
-  .bano-text {
+  .mini-text {
     grid-column: 2 / 3;
-     grid-row: 3 / 4;
+     grid-row: 4 / 5;
      text-align: center;
     }
-  .corte {
-    grid-column: 2 / 3;
-    grid-row: 5 / 6 ;
-    margin: auto;
-  }
-  .corte-text {
+  .razas-pequenas{
     grid-column: 2 / 3;
     grid-row: 6 / 7;
     text-align: center;
   }
-  .spa {
+  .small {
     grid-column: 2 / 3;
-    grid-row: 8 / 9;
+    grid-row: 7 / 8 ;
     margin: auto;
   }
-  .spa-text {
+  .small-text {
     grid-column: 2 / 3;
-    grid-row: 9 / 10;
+    grid-row: 8 / 9;
+    text-align: center;
+  }
+  .razas-medianas{
+    grid-column: 2 / 3;
+    grid-row: 10 / 11;
+    text-align: center;
+  }
+  .medium {
+    grid-column: 2 / 3;
+    grid-row: 11 / 12;
+    margin: auto;
+  }
+  .medium-text {
+    grid-column: 2 / 3;
+    grid-row: 12 / 13;
+    text-align: center;
+  }
+  .razas-grandes{
+    grid-column: 2 / 3;
+    grid-row: 14 / 15;
+    text-align: center;
+  }
+  .big {
+    grid-column: 2 / 3;
+    grid-row: 15 / 16;
+    margin: auto
+  }
+  .big-text {
+    grid-column: 2 / 3;
+    grid-row: 16 / 17;
     text-align: center;
   }
 }
@@ -61,89 +90,77 @@
 @media only screen and (min-width: 751px){
   .products-section {
     min-height: 97vh;
-    grid-template-columns: 5% auto 20px auto 20px auto 5%;
-    grid-template-rows: 100px auto auto 100px;
+    grid-template-columns: 5% auto 10px auto 10px auto 10px auto 5%;
+    grid-template-rows: 100px auto auto auto 100px;
   }
   #products-title{
-    grid-column: 1 / 8;
+    grid-column: 1 / 10;
     grid-row: 1;
     display: flex;
     margin: auto;
     align-items: center;
     font-size: 50px; 
   }
-  
-  .bano {
+  .razas-mini{
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    text-align: center;
+  }
+  .mini {
      grid-column: 2 / 3;
-     grid-row: 2 / 3;
+     grid-row: 3 / 4;
      margin: auto;
   }
-  .bano-text {
+  .mini-text {
     grid-column: 2 / 3;
-     grid-row: 3 / 4;
+     grid-row: 4 / 5;
      text-align: center;
     }
-  .corte {
+  .razas-pequenas{
     grid-column: 4 / 5;
     grid-row: 2 / 3;
-    margin: auto;
+    text-align: center;
   }
-  .corte-text {
+  .small {
     grid-column: 4 / 5;
     grid-row: 3 / 4;
-    text-align: center;
-  }
-  .spa {
-    grid-column: 6 / 7;
-    grid-row: 2 / 3;
     margin: auto;
   }
-  .spa-text {
+  .small-text {
+    grid-column: 4 / 5;
+    grid-row: 4 / 5;
+    text-align: center;
+  }
+  .razas-medianas{
+    grid-column: 6 / 7;
+    grid-row: 2 / 3;
+    text-align: center;
+  }
+  .medium {
     grid-column: 6 / 7;
     grid-row: 3 / 4;
+    margin: auto;
+  }
+  .medium-text {
+    grid-column: 6 / 7;
+    grid-row: 4 / 5;
+    text-align: center;
+  }
+  .razas-grandes{
+    grid-column: 8 / 9;
+    grid-row: 2 / 3;
+    text-align: center;
+  }
+  .big {
+    grid-column: 8 / 9;
+    grid-row: 3 / 4;
+    margin: auto;
+  }
+  .big-text {
+    grid-column: 8 / 9;
+    grid-row: 4 / 5;
     text-align: center;
   }
 }
 
 
-/* #products-title{
-  grid-column: 1 / 8;
-  grid-row: 1;
-  display: flex;
-  margin: auto;
-  align-items: center;
-  font-size: 50px; 
-}
-
-.bano {
-   grid-column: 2 / 3;
-   grid-row: 2 / 3;
-   margin: auto;
-}
-.bano-text {
-  grid-column: 2 / 3;
-   grid-row: 3 / 4;
-   text-align: center;
-  }
-.corte {
-  grid-column: 4 / 5;
-  grid-row: 2 / 3;
-  margin: auto;
-}
-.corte-text {
-  grid-column: 4 / 5;
-  grid-row: 3 / 4;
-  text-align: center;
-}
-.spa {
-  grid-column: 6 / 7;
-  grid-row: 2 / 3;
-  margin: auto;
-}
-.spa-text {
-  grid-column: 6 / 7;
-  grid-row: 3 / 4;
-  text-align: center;
-}
-
- */
