--- a/docs/css/navbar.css
+++ b/docs/css/navbar.css
@@ -159,7 +159,7 @@ article h2 {
 }
 /* --------------My styles -------------- */
 .navbar {
-  background-color: #f8efe5; 
+  background-color: #fce9ef; 
   height: 127px; 
   max-width: 100%; 
   padding: 0 2vw;
