--- a/docs/css/products.css
+++ b/docs/css/products.css
@@ -1,5 +1,5 @@
 .products-section {
-  background-image: url("../images/cortes-bg.png");
+  background-image: url("../images/cortes-bg-1.png");
   padding-top: 3.5%;
   background-repeat: no-repeat;
   background-size: cover;
