--- a/docs/css/products.css
+++ b/docs/css/products.css
@@ -195,7 +195,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    margin: 0 3rem;
+    margin: 0;
   }
 }
 
