--- a/docs/css/hero.css
+++ b/docs/css/hero.css
@@ -1,5 +1,5 @@
 .hero-section {
-  background-image: url("../images/dog-bg.png");
+  
   height: 80vh;
   background-repeat: no-repeat;
   background-size: cover;
@@ -30,11 +30,14 @@
   }
   .hero-section {
     padding-top: 30px;
+    background-image: url("../images/example_1.jpg");
+    background-position: center center;
   }
 }
 @media only screen and (min-width: 751px) {
   .hero-section {
     min-height: 95vh;
+    background-image: url("../images/dog-bg.png");
   }
   .hero-mobile{
     display: none;
@@ -43,6 +46,36 @@
     max-width: 100%; 
     height: auto; 
     display: block;
+  }
+
+  #hero-slogan{
+    position: absolute;
+    bottom: 160px;
+    left: 257px;
+  }
+
+  #hero-cita{
+    position: absolute;
+    bottom: 120px;
+    left: 240px;
+    border: #eb6597 solid;
+    border-radius: 10px;
+    color: white;
+    background-color: #eb6597;
+    font-size: 18px;
+    padding: 8px;
+  }
+
+  #hero-prices{
+    position: absolute;
+    bottom: 120px;
+    left: 375px;
+    border: #eb6597 solid;
+    border-radius: 10px;
+    color: #eb6597;
+    background-color: white;
+    font-size: 18px;
+    padding: 8px;
   }
   #conocenos-btn{
     display: block;
