--- a/docs/css/products.css
+++ b/docs/css/products.css
@@ -11,8 +11,9 @@
 
 /* Grid columns and backgroung for mobile */
 @media only screen and (max-width: 750px){
-
+  
   .products-section {
+    display: none;
     grid-template-columns: 5% auto 5%;
     grid-template-rows: 100px auto auto auto auto 20px auto auto auto 20px auto auto auto 20px auto auto auto 60px;
   }
@@ -96,7 +97,9 @@
 
 /* Grid columns and backgroung for tablets and desktop */
 @media only screen and (min-width: 751px){
-  
+  #products-mobile{
+    display: none;
+  }
   .products-section {
     min-height: 97vh;
     grid-template-columns: 5% auto 10px auto 10px auto 10px auto 5%;
@@ -187,20 +190,20 @@
 .vip {
   background-color: #eb6597;  
   justify-content: center;
-  display: block;
   padding-bottom: 3rem;
 }
 
-@media only screen and (max-width: 700px){  
+@media only screen and (max-width: 750px){  
   .vip-products {
     display: none;
   }  
   .vip{
     min-height:20vh;
+    display: none;
   }
 }
 
-@media only screen and (min-width: 701px){
+@media only screen and (min-width: 751px){
  /*  #vip-slide {
     display: none;
   } */
@@ -210,6 +213,9 @@
     grid-template-rows: repeat(2, 1fr);
     margin: 0 3rem;
   } */
+  .vip{
+    display: block;
+  }
 }
 
 .vip-item{
