--- a/docs/css/navbar.css
+++ b/docs/css/navbar.css
@@ -15,7 +15,7 @@
   padding: .75em 15px;
   line-height: 1em;
   font-size: 1em;
-  color: rgb(244, 139, 72);
+  color: balck;
 }
 
 
@@ -116,9 +116,9 @@ article h2 {
   display: block;
   left: 0;
   outline: none;
-  -moz-box-shadow: 3px 0 12px rgba(0,0,0,.25);
-  -webkit-box-shadow: 3px 0 12px rgba(0,0,0,.25);
-  box-shadow: 3px 0 12px rgba(0,0,0,.25);
+  -moz-box-shadow: 3px 0 12px rgba(235, 101, 151, 1);
+  -webkit-box-shadow: 3px 0 12px rgba(235, 101, 151, 1);
+  box-shadow: 3px 0 12px rgba(235, 101, 151, 1);
 }
 
 .main-menu:target .menu-close,
