--- a/src/css/products.css
+++ b/src/css/products.css
@@ -1,5 +1,5 @@
 .products-section {
-  background-image: url("../images/cortes-bg-1.png");
+  background-image: url("../../docs/images/cortes-bg-1.png");
   padding-top: 3.5%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -9,15 +9,29 @@
   grid-gap: 10px;
 }
 
+#corte-ribbon{
+  margin: auto;
+  display: flex; 
+  justify-content: center;
+}
+#tijeras-costo-corte{
+  height: 3rem; 
+  margin: auto 2rem;
+}
+
 /* Grid columns and backgroung for mobile */
 @media only screen and (max-width: 750px){
   
   .products-section {
     display: none;
-    grid-template-columns: 5% auto 5%;
-    grid-template-rows: 100px auto auto auto auto 20px auto auto auto 20px auto auto auto 20px auto auto auto 60px;
+   /*  grid-template-columns: 5% auto 5%;
+    grid-template-rows: 100px auto auto auto auto 20px auto auto auto 20px auto auto auto 20px auto auto auto 60px; */
   }
-  #products-title{
+  #products-mobile {
+    width: 100%;
+  }
+
+  /* #products-title{
     grid-column: 1 / 4;
     grid-row: 1;
     display: flex;
@@ -91,7 +105,7 @@
     grid-column: 2 / 3;
     grid-row: 17 / 18;
     text-align: center;
-  }
+  } */
 }
 
 
@@ -131,11 +145,17 @@
      grid-column: 2 / 3;
      grid-row: 4 / 5;
      margin: auto;
+     text-align: center; 
+     padding-top: 5%;
+  }
+  #mini-im{
+    max-width: 100%;
   }
   .mini-text {
     grid-column: 2 / 3;
-     grid-row: 5 / 6;
-     text-align: center;
+    grid-row: 5 / 6;
+    text-align: center;
+    display: block;
     }
   .razas-pequenas{
     grid-column: 4 / 5;
@@ -146,11 +166,17 @@
     grid-column: 4 / 5;
     grid-row: 4 / 5;
     margin: auto;
+    text-align: center; 
+    padding-top: 5%;
+  }
+  #small-img{
+    max-width: 100%;
   }
   .small-text {
     grid-column: 4 / 5;
     grid-row: 5 / 6;
     text-align: center;
+    display: block;
   }
   .razas-medianas{
     grid-column: 6 / 7;
@@ -161,11 +187,17 @@
     grid-column: 6 / 7;
     grid-row: 4 / 5;
     margin: auto;
+    text-align: center; 
+    padding-top: 5%;
+  }
+  #medium-img{
+    max-width: 100%;
   }
   .medium-text {
     grid-column: 6 / 7;
     grid-row: 5 / 6;
     text-align: center;
+    display: block;
   }
   .razas-grandes{
     grid-column: 8 / 9;
@@ -176,11 +208,17 @@
     grid-column: 8 / 9;
     grid-row: 4 / 5;
     margin: auto;
+    text-align: center; 
+    padding-top: 5%;
+  }
+  #big-img{
+    max-width: 100%;
   }
   .big-text {
     grid-column: 8 / 9;
     grid-row: 5 / 6;
     text-align: center;
+    display: block;
   }
 }
 
@@ -192,6 +230,28 @@
   justify-content: center;
   padding-bottom: 3rem;
 }
+
+#vip-ribbon{
+  width: 100%; 
+  background-color: white; 
+  height: 50px; 
+  margin-top: 40px; 
+  padding: 5px; 
+  display: inline-flex;
+}
+
+#vip-slide{
+  margin-top: 30px;
+  margin-left: 11vh;
+  margin-right: 11vh;
+}
+
+.vip-product{
+  text-align: center; 
+  color: white;
+}
+
+
 
 @media only screen and (max-width: 750px){  
   .vip-products {
@@ -208,15 +268,4 @@
   .vip{
     display: block;
   }
-}
-
-.vip-item{
-  font-size: 25px;
-  margin: auto;
-  text-align: center;
-  color: white;
-}
-
-.vip-item > img {
-  margin: auto;
 }
